<resources xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <string name="app_name">RH Disease</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."</string>
    <string name="screening">Form#5 Screening</string>
    <string name="ultrasound">Form#8 Ultrasound</string>
    <string name="end_interview">ختم ڪيو</string>
    <string name="start_interview">انٽرويو شروع ڪيو</string>
    <string name="nextSection">اڳئين سيڪشن تي وڃو</string>
    <string name="addMember">ميمبر جو نالو داخل ڪيو</string>
    <string name="dcstatus">انٽرويو جو نتيجو</string>
    <string name="complete">مڪمل</string>
    <string name="incomplete">نا مڪمل</string>
    <string name="participant_id">شرڪت ڪندڙ جي آءِ ڊي</string>
    <string name="facilityName">سهولت ڪار جو نالو ۽ شناخت</string>
    <string name="facilityName1">ٽي ايڇ ڪيو جوهي</string>
    <string name="facilityName2">ڊي ايڇ ڪيو دادو</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="other">ٻيو ڪو وضاحت ڪريو.</string>
    <string name="dkn">خبر نه آھي</string>
    <string name="yes">ھا</string>
    <string name="no">نه</string>
    <string name="dcna">لاڳو نه ٿو تئي</string>
    <string name="times">تعداد</string>
    <string name="male">مرد</string>
    <string name="female">عورت</string>
    <string name="day">ڏينهن</string>
    <string name="month">مهينو</string>
    <string name="year">سال</string>
    <string name="hour">ڪلاڪ</string>
    <string name="min">منٽ</string>
    <string name="Frequency">تعداد</string>
    <string name="f07heading">حمل واري عورت جي بنيادي معلومات</string>
    <string name="sec07ALabel">آبادياتي معلومات</string>
    <string name="f07pid">شرڪت ڪندڙ جي آءِ ڊي</string>
    <string name="f07rp">تحقيق ڪندڙ جو نالو ۽ شناخت آءِ ڊي</string>
    <string name="f07fac">سهولت جو نالو ۽ شناخت  آءِ ڊي</string>
    <string name="f07doe">معائني جو ٽائيم ۽ تاريخ</string>
    <string name="f07sub">آبادياتي معلومات</string>
    <string name="f07a001">موجوده عمر (سالن ۾)</string>
    <string name="f07a002">ڇا توهان ڪڏهن اسڪول ۾ پڙهيا آهيو؟</string>
    <string name="f07a003">جيڪڏهن توهان اسڪول ۾ پڙهيا آهيو ته ڪيتري تعليم مڪمل ڪئي آهي؟</string>
    <string name="f07a003a">پهرين ڪلاس</string>
    <string name="f07a003b">ٻي ڪلاس</string>
    <string name="f07a003c">ٽين ڪلاس</string>
    <string name="f07a003d">چوٿين ڪلاس</string>
    <string name="f07a003e">پنجين ڪلاس</string>
    <string name="f07a003f">ڇهين ڪلاس</string>
    <string name="f07a003g">ستين ڪلاس</string>
    <string name="f07a003h">اٺين ڪلاس</string>
    <string name="f07a003i">نائين ڪلاس</string>
    <string name="f07a003j">چوڏهين ڪلاس</string>
    <string name="f07a003k">سورهين ڪلاس</string>
    <string name="f07a003l">ڊاڪٽر/انجنيئر/پي ايڇ ڊي</string>
    <string name="f07a004">موجوده ازدواجي حثيت</string>
    <string name="f07a004a">شادي شده</string>
    <string name="f07a004b">بيوه</string>
    <string name="f07a004c">طلاقيافته</string>
    <string name="f07a004d">عليحدگي</string>
    <string name="f07a004e">ڪنواري / شادي ئي نه ڪئي</string>
    <string name="f07a005">ڇا توهان ۽ توهان جي مڙس جو شادي کان پهرين ڪو رشتو هو ؟</string>
    <string name="f07a006">ڪهڙي قسم جو خانداني رشتو آهي/هيو؟</string>
    <string name="f07a006a">پيءُ جي طرفان سڀ کان پهريون سوٽ</string>
    <string name="f07a006b">ماءُ جي طرفان سڀ کان پهريون سوٽ</string>
    <string name="f07a006c">ٻيو سوٽ</string>
    <string name="f07a007">ڇا توهان هن وقت ملازم آهيو؟</string>
    <string name="f07a008">توهان جي ملازمت ڪهڙي آهي</string>
    <string name="f07a008a">پئشي وارو/هنر مند/انتظاميا</string>
    <string name="f07a008b">ڪلارڪ</string>
    <string name="f07a008c">خريد ۽ فروخت</string>
    <string name="f07a008d">تربيت يافته مزدور</string>
    <string name="f07a008e">غير تربيت يافته مزدور</string>
    <string name="f07a008f">گھريلو خدمتون</string>
    <string name="f07a008g">زراعت</string>
    <string name="f07a009">توهان هفتي ۾ ڪيترا ڏينهن ڪم ڪندا آهيو؟</string>
    <string name="f07a009day">تعداد لکو (ڏينهن ۾)</string>
    <string name="f07a010">هڪ ڏينهن ۾ ڪيترا ڪلاڪ ڪم ڪندا آهيو؟</string>
    <string name="f07a010hour">تعداد لکو (ڪلاڪن ۾)</string>
    <string name="f07bsub">  گھر جي ڀاتين جي سماجي ۽ معاشي معلومات  </string>
    <string name="sec07BLabel">  گھر جي ڀاتين جي سماجي ۽ معاشي معلومات  </string>
    <string name="f07b001"> توهان جي گهر ۾ پيئڻ جي پاڻي جو اهم ذريعوڪهڙو آهي؟</string>
    <string name="f07b001a">گھر جو نلڪو</string>
    <string name="f07b001b">عوامي نلڪو</string>
    <string name="f07b001c">ٽيوب ويل يا بورنگ</string>
    <string name="f07b001d">هٿ وارو نلڪو</string>
    <string name="f07b001e">محفوظ کوه</string>
    <string name="f07b001f">غير محفوظ کوه</string>
    <string name="f07b001g">محفوظ چشمي جو پاڻي</string>
    <string name="f07b001h">غير محفوظ چشمي جو پاڻي</string>
    <string name="f07b001i">برسات جو پاڻي</string>
    <string name="f07b001j">پاڻي جو ٽينڪر</string>
    <string name="f07b001k">گڏه گاڏي ۾ آيل پاڻي ننڍو درم</string>
    <string name="f07b001l">( سطح وارو پاڻي (دريا،ڊيم،جھيل،تلاءُ،ندي،ڪينال)</string>
    <string name="f07b001m">بوتل جو پاڻي</string>
    <string name="f07b002">پاڻيءَ تائين پهچڻ، پاڻي حاصل ڪرڻ ۽ کڻي اچڻ ۾ ڪيترو وقت  لڳندو آهي</string>
    <string name="f07b002a">حدن ۾</string>
    <string name="f07b002sub">يا</string>
    <string name="f07b002b">خبر ناهي</string>
    <string name="f07b002c">مهرباني ڪري منٽن ۾ ٻڌايو</string>
    <string name="f07b003">ڇا توهان پنهنجي پاڻيءَ کي صاف ڪندا آهيو ڪنهن به طريقي سان جيئين اهو پيئڻ لاءِ محفوظ ۽ بهتر ٿئي؟</string>
    <string name="f07b004">پيئڻ جي پاڻي کي صاف ڪرڻ لاءِ توهان اڪثر ڪري ڪهڙو طريقو استعمال ڪندا آهيو؟</string>
    <string name="f07b004a">اٻارڻ </string>
    <string name="f07b004b">بليچ يا ڪلورين  شامل ڪرڻ</string>
    <string name="f07b004c">ڪپڙي سان ڇاڻي </string>
    <string name="f07b004d">ٻاڻي فلٽر استعمال ڪندا آهيون</string>
    <string name="f07b004e">اس تي رکڻ</string>
    <string name="f07b004f">بيٺل صاف پاڻي</string>
    <string name="f07b005">عام طور تي توهان جا گهرڀاتي ڪهڙي قسم جي ليٽرين جو استعمال ڪندا آهن</string>
    <string name="f07b005a">فليش يا خراب فليش</string>
    <string name="f07b005b">نڪاسي جو باقاعدي نظام  </string>
    <string name="f07b005c">گٽر سان جڙيل  نيڪال</string>
    <string name="f07b005d">ٻي ڪنهن جاءِ وارو نيڪال</string>
    <string name="f07b005e">فليش خبر ناهي ڪٿي</string>
    <string name="f07b005f">کڏي واري حاجت واري جاءِ</string>
    <string name="f07b005g">هوادار حاجت واري جاءِ</string>
    <string name="f07b005h">سليب سان عارضي حاجت واري جاءِ </string>
    <string name="f07b005i">کليل ليٽرين بغير اينٽ سان۔</string>
    <string name="f07b005j">   بالٽي واري حاجت جي جاءِ </string>
    <string name="f07b005k">  ٽنگيل حاجت واري جاءِ</string>
    <string name="f07b005l">ڪا به سهولت ناهي /ٻوڙن ۾/زمينن ۾</string>
    <string name="f07b006">ڇا توهان اها ليٽرين ٻين گهرن کي به استعمال ڪرڻ ڏيندا آهيو؟ </string>
    <string name="f07b007">ڇا توهان جي گھر ۾ هي شيونِ آهن؟</string>
    <string name="f07b00701">لائيٽ</string>
    <string name="f07b00702">ريڊيو</string>
    <string name="f07b00703">ٽي وي</string>
    <string name="f07b00704">موبائيل فون</string>
    <string name="f07b00705">ٽيليفون</string>
    <string name="f07b00706">ريفريجيريٽر</string>
    <string name="f07b00707">الماري</string>
    <string name="f07b00708">ٽيبل</string>
    <string name="f07b00709">ڪرسي</string>
    <string name="f07b00710">بيڊ</string>
    <string name="f07b00711">سوفو</string>
    <string name="f07b00712">سلائي مشين</string>
    <string name="f07b00713">پنکو</string>
    <string name="f07b00714">اي سي</string>
    <string name="f07b00715">ڊي وي ڊي</string>
    <string name="f07b00716">ڪيمرا</string>
    <string name="f07b00717">ڪمپيوٽر</string>
    <string name="f07b00718">نلڪو</string>
    <string name="f07b008">توهان پنهنجي گهر ۾ رڌ پچاءُ لاءُ ڪهڙي قسم جو ٻارڻ استعمال ڪندا آهيو؟</string>
    <string name="f07b008a">بجلي</string>
    <string name="f07b008b">گئس سيليڊر</string>
    <string name="f07b008c">قدرتي گئس</string>
    <string name="f07b008d">بايو گئس</string>
    <string name="f07b008e">گاسليٽ</string>
    <string name="f07b008f">ڪوئلو</string>
    <string name="f07b008g">ڪاٺيون</string>
    <string name="f07b008h">ڪچرو/ڄاريون/گاه</string>
    <string name="f07b008i">زرعي فصل</string>
    <string name="f07b008j">جانورن جو ڇيڻو</string>
    <string name="f07b008k">گھر ۾ کاڌو ڪو نه پچندو آهي</string>
    <string name="f07b009">ڇا رڌ پچاءُ عام طور تي گھر ۾ ٿيندو آهي يا الڳ جڳھ يا گھر کان ٻاهر؟</string>
    <string name="f07b009a">گھر جي اندر</string>
    <string name="f07b009b">الڳ بلڊ نگ ۾</string>
    <string name="f07b009c">گھر کان ٻاهر</string>
    <string name="f07b010">ڇا توهان کي الڳ مخصوص جڳھ آهي رڌ پچاءُ لاءِ جيئين بورچيخانو؟</string>
    <string name="f07b011">ڪيتري وقت کانپوءِ توهان جي گهر ۾ تمباڪو نوشي ڪئي ويندي آهي؟ </string>
    <string name="f07b01102">توهان ٻڌائي سگهو ٿا ته هفتي ، مهيني ، مهيني کان گهٽ يا ڪڏهن به نه ؟</string>
    <string name="f07b011a">روزانو</string>
    <string name="f07b011b">هفتي ۾</string>
    <string name="f07b011c">مهيني ۾</string>
    <string name="f07b011d">هڪ مهيني کان گھٽ</string>
    <string name="f07b011e">ڪڏهن به نه</string>
    <string name="f07b012">گهر جي فرش جي  تعمير ۾ ڪهڙو بنيادي مواد يا سامان استعمال ڪيو ويو آهي؟</string>
    <string name="f07b012a">قدرتي فرش</string>
    <string name="f07b012b">زمين/ريت/مٽي</string>
    <string name="f07b012c">صاف فرش</string>
    <string name="f07b012d">چپس</string>
    <string name="f08a001">موجوده حمل جي دوران پيٽ ۾ موجود ٻارن جو تعداد</string>
    <string name="f08a002">بريفنگ</string>
    <string name="f08a002a">Cephalic</string>
    <string name="f08a002b">Transverse</string>
    <string name="f08a002c">Breech</string>
    <string name="f08a002d">Oblique</string>
    <string name="f08a003">ٻار جي دل جي ڌڙڪن (bpm) جي  في منٽ رفتار</string>
    <string name="f10heading"> فارم 11:   ويم ۽ نئين ڄاول ٻار جو معائنو</string>
    <string name="f10a002a">ٽي ايڇ ڪيو سهولت</string>
    <string name="f10a002b">گھر</string>
    <string name="f10a005a">تحقيقي صحت مرڪز (ٽي ايڇ ڪيو)</string>
    <string name="f10a008b">آپريشن سان</string>
    <string name="f10b001">ويم کان هڪدم پوءِ ٻار ڪهڙي حال ۾ هيو ؟
    (مرده ڄم ۾ ڪا به چرپر ،ساه کڻڻ،رڙ ڪرڻ نه هوندي آهي)</string>
    <string name="f10b001a">زنده</string>
    <string name="f10b001b">مرده</string>
    <string name="f10b002">جنس</string>
    <string name="f10b003">ڇا ٻار پيدائش کان پوءِ هڪ دم رنو؟</string>
    <string name="f10b004">پيدائشي نخس آهي</string>
    <string name="f10b005">بچاءُ جي ڪهڙا لاءِ اپاءُ ورتا؟</string>
    <string name="f10b005b">چوسڻ</string>
    <string name="f10b005c">آڪسيجن آزاد نارمل وهڪري سان</string>
    <string name="f10b005d">بيگ ۽ ماسڪ سان ساهه کڻائڻ</string>
    <string name="f10b005e">دٻائڻ ، زور ڏيڻ</string>
    <string name="f10b005f">وات کان وات تائين</string>
    <string name="f10b005g">پٺي تي دٻائڻ ٺپڪي هڻڻ</string>
    <string name="f10b006">ڇا نئين ڄاول ٻار ڄمڻ کان هڪ ڪلاڪ جي اندر ماءُ جو کير پيتو؟</string>
    <string name="f10b007">ڇا نئين ڄاول ٻار کي NICU ۾ داخل ڪرڻ جي ضرورت آهي؟</string>
    <string name="f10b008">موجوده حثيت</string>
    <string name="f10b008a">زنده</string>
</resources>