<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:scrollbars="horizontal"
    tools:context="edu.aku.hassannaqvi.rhdisease.activities.Form10.F10BActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/f10heading"
            android:textSize="35sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/pink_100"
            android:gravity="center"
            android:text="Newborn Assessment"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/f10b001"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/f10b001"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/f10b001a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/f10b001a" />

            <RadioButton
                android:id="@+id/f10b001b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/f10b001b" />

            <RadioButton
                android:id="@+id/f10b001999"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/dkn" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/f10b002"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/f10b002"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/f10b002a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/f10a002a" />

            <RadioButton
                android:id="@+id/f10a002b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/f10a002b" />

            <RadioButton
                android:id="@+id/f10a002999"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/dkn" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/f10b003"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <RadioGroup
            android:id="@+id/f10b003"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/f10b003a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/f10a003b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/f10a003999"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/dkn" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/f10b004"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <RadioGroup
            android:id="@+id/f10b004"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/f10b004a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/f10a004b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/f10a004999"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/dkn" />

        </RadioGroup>

        <EditText
            android:id="@+id/f10b004x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/f10b004"
            android:inputType="textCapWords"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/f10b005"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/f10b005a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/f10a005a" />

        <CheckBox
            android:id="@+id/f10b005b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/f10b005b" />

        <CheckBox
            android:id="@+id/f10b005c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/f10b005c" />

        <CheckBox
            android:id="@+id/f10b005d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/f10b005d" />

        <CheckBox
            android:id="@+id/f10b005e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/f10b005e" />

        <CheckBox
            android:id="@+id/f10b005f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/f10b005f" />

        <CheckBox
            android:id="@+id/f10b005g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/f10b005g" />

        <CheckBox
            android:id="@+id/f10b005999"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/dkn" />

        <CheckBox
            android:id="@+id/f10b005888"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/other" />


        <EditText
            android:id="@+id/f10b005888x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/other"
            android:inputType="textCapWords"
            android:visibility="gone" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/f10b006"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/f10b006"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/f10b006a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/f10a006b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/f10a006999"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/dkn" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/f10b007"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <RadioGroup
            android:id="@+id/f10b007"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/f10b007a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/f10a007b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/f10a007999"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/dkn" />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/f10b008"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <RadioGroup
            android:id="@+id/f10b008"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/f10b008a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/f10b008a" />

            <RadioButton
                android:id="@+id/f10a008b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/f10a008b" />

            <RadioButton
                android:id="@+id/f10a008999"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/dkn" />

        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_End"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="endInterview"
                android:text="@string/end_interview"
                android:textColor="#ff1e1e" />

            <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->

            <Button
                android:id="@+id/btn_Continue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="startInterview"
                android:text="@string/nextSection"
                android:textColor="#1ed61e" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>
