<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:scrollbars="horizontal"
    tools:context="edu.aku.hassannaqvi.rhdisease.activities.Form8.F08AActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/USExam"
            android:textSize="30sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/f08a001"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/f08a001"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:digits="0123456789"
            android:hint="@string/f08a001" />

        <CheckBox
            android:id="@+id/f08a001999"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dkn" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/f08a002"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <RadioGroup
            android:id="@+id/f08a002"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/f08a002a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/f08a002a" />

            <RadioButton
                android:id="@+id/f08a002b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/f08a002b" />

            <RadioButton
                android:id="@+id/f08a002c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/f08a002c" />

            <RadioButton
                android:id="@+id/f08a002d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/f08a002d" />

            <RadioButton
                android:id="@+id/f08a002999"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/dkn" />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/f08a003"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/f08a003"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:digits="0123456789"
            android:hint="@string/f08a003" />

        <CheckBox
            android:id="@+id/f08a003999"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dkn" />

    </LinearLayout>
</ScrollView>