<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.aku.hassannaqvi.rhdisease.activities.EndingActivity">

    <ScrollView
        android:id="@+id/scrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/dcstatus"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:id="@+id/dcstatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/dcstatus01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/complete" />

                <RadioButton
                    android:id="@+id/dcstatus02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/incomplete" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_End"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:onClick="endInterview"
                android:text="@string/end_interview"
                android:textColor="#ff1e1e" />


        </LinearLayout>


    </ScrollView>

</RelativeLayout>
